# stuff

ml-skel/: CMakeLists.txt  CMakePresets.json
ml-skel/include/: raii_timer.hpp
ml-skel/src/: main.cpp  vectorwork  vectorwork.cpp
ml-skel/src/vectorwork.dSYM/Contents/: Info.plist
ml-skel/src/vectorwork.dSYM/Contents/Resources/DWARF/: vectorwork
ml-skel/src/vectorwork.dSYM/Contents/Resources/Relocations/aarch64/: vectorwork.yml
reconciliation-engine/: README.md  column_detector.py  config.py  embedding.py  feedback.py  ingestion.py  matching.py  output.py  reconcile.py  requirements.txt  sample_bank_book.csv  sample_our_book.csv
